--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="assets/images/favicon_io/site.webmanifest">
 </head>
 <body>
+    <!-- Navbar Section -->
     <nav id="nav" class="nav">
         <div class="nav-center">
             <div class="nav-header">
@@ -28,6 +29,8 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Sidebar Section -->
     <aside class="sidebar">
         <div>
             <button class="close-btn">
@@ -40,30 +43,36 @@
                 <li><a href="">تماس با من</a></li>
             </ul>
             <ul class="sidebar-icons">
-                <li>
-                    <a href="">
-                        <i class="bi bi-linkedin"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="bi bi-instagram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="bi bi-telegram"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="bi bi-whatsapp"></i>
-                    </a>
-                </li>
+                <li><a href=""><i class="bi bi-linkedin"></i></a></li>
+                <li><a href=""><i class="bi bi-instagram"></i></a></li>
+                <li><a href=""><i class="bi bi-telegram"></i></a></li>
+                <li><a href=""><i class="bi bi-whatsapp"></i></a></li>
             </ul>
     </div>
     </aside>
-    <header class="hero"></header>
+    
+    <!-- Hero Section -->
+    <header class="hero">
+        <div class="section-center hero-center">
+            <article class="hero-info">
+                <div class="underline"></div>
+                <h2>لورم ایپسوم</h2>
+                <h4>لورم ایپسوم، متن ساختگی است</h4>
+                <a href="" class="btn hero-btn">لورم ایپسوم</a>
+                <ul class="social-icons hero-icons">
+                    <li><a href=""><i class="bi bi-linkedin"></i></a></li>
+                    <li><a href=""><i class="bi bi-instagram"></i></a></li>
+                    <li><a href=""><i class="bi bi-telegram"></i></a></li>
+                    <li><a href=""><i class="bi bi-whatsapp"></i></a></li>
+                </ul>
+            </article>
+            <div class="hero-image">
+                <img class="hero-photo" src="assets/images/image1.jpg" alt="">
+            </div>
+        </div>
+    </header>
+    
+    <!-- Main Section -->
 </body>
 <script src="assets/app.js"></script>
 </html>
